Fixed bug #35900 (stream_select() should warning when tv_sec is negative).